[package]
name = "fast-multipart-parser"
version = "0.1.0"
edition = "2021"
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]

[lib]
name = "fast_multipart_parser"
crate-type = ["cdylib"]

[dependencies]
encoding_rs = "0.8.31"
lazy_static = "1.4.0"
percent-encoding = "2.2.0"
pyo3 = { version = "0.17.3", features = ["extension-module", "abi3-py38"] }
pythonize = "0.17.0"
regex = "1.7.0"
rustc-hash = "1.1.0"
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
